--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "format": "prettier --write ."
   },
   "keywords": [],
   "author": "",
@@ -11,11 +12,13 @@
   "description": "",
   "dependencies": {
     "express": "^4.19.2",
+    "express-validator": "^7.1.0",
     "joi": "^17.13.3",
     "mongoose": "^8.5.1",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "prettier": "^3.3.3"
   }
 }
