--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express-validator": "^7.1.0",
     "joi": "^17.13.3",
     "mongoose": "^8.5.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.14"
   },
   "devDependencies": {
     "nodemon": "^3.1.4",
